Fix z-index of inscriptions footer

--- a/packages/espresso-block-explorer-components/src/pages/inscriptions_page.css
+++ b/packages/espresso-block-explorer-components/src/pages/inscriptions_page.css
@@ -218,6 +218,7 @@ p {
   width: 100vw;
 
   will-change: color;
+  z-index: 2;
 }
 
 .scroll-to-continue-section::before {
